# fde_rust

./: Cargo.toml  README.md
data/: fildeclair.sq3.example
src/: ca.rs  cadaosqlite.rs  camonth.rs  dialog.rs  main.rs
