[package]
name = "fde"
version = "0.1.0"
edition = "2021"
authors = ["Thierry Probst <thierry.probst@free.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.24"
